# controle-de-estoque

./: .gitignore  Dockerfile  README.md  alembic.ini  debug_routes.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202605280001_initial_schema.py  202605280002_expand_products.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Loading.tsx  Toast.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/routes/: PrivateRoute.tsx
frontend/src/types/: auth.ts  brand.ts  cart.ts  category.ts  movement.ts  product.ts  product_image.ts  report.ts  review.ts  supplier.ts
frontend/src/utils/: format.ts
scripts/: seed_products.py
src/: __init__.py  main.py
src/api/: deps.py  router.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/database/: base.py  session.py
src/models/: __init__.py  enums.py  movement.py  product.py  user.py
src/repositories/: movement_repository.py  product_image_repository.py  product_repository.py  user_repository.py
src/schemas/: auth.py  movement.py  product.py  report.py  user.py
src/services/: auth_service.py  movement_service.py  product_service.py  report_service.py  user_service.py
tests/: conftest.py  test_auth_users.py  test_expanded_domains.py  test_inventory.py
(+17 files in other folders)
